cambios en home 2

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,40 +1,41 @@
-<div class="fondo">
-  <div class="row justify-content-center align-items-center">
-    <div class="col-auto text-center">
-      <div class="m-0 row justify-content-center align-item-center">
-        <div class="col-auto text-center home-logo">
-          <img class="" src="../../../assets/img/Home/keta1.svg"/>
-        </div>
+<div class="fondo d-flex align-items-center justify-content-center">
+  <div class="">
+    <div class="m-0 row justify-content-center align-item-center">
+      <div class="col-auto text-center home-logo">
+        <img class="" src="../../../assets/img/Home/keta1.svg"/>
       </div>
-      <div class="m-0 row justify-content-center align-item-center">
-        <div class="col-auto text-center">
-          <a routerLink="/inicio" class="button-64">
-            <span class="text">
-              Ingresa
-            </span>
-          </a>  
-        </div>
+    </div>
+    <div class="m-0 row justify-content-center align-item-center">
+      <div class="col-auto text-center">
+        <a routerLink="/inicio" class="button-64">
+          <span class="text">
+            Ingresa
+          </span>
+        </a>  
       </div>
-      <div class="m-0 row justify-content-center align-item-center">
-        <div class="siguenos col-auto text-center">
-          <span> 
-            Síguenos en: 
-            <a href="https://twitter.com/KetanoLab" target="_blank" class="azul"> 
-              Twitter 
-            </a> | 
-            <a href="https://www.facebook.com/ketanolabsrl" target="_blank" class="azul"> 
-              Facebook 
-            </a>| 
-            <a href="https://www.linkedin.com/company/76603728" target="_blank" class="azul"> 
-              LinkedIn 
-            </a>
-          </span>  
-        </div>
+    </div>
+    <div class="m-0 row justify-content-center align-item-center">
+      <div class="siguenos col-auto text-center">
+        <span> 
+          Síguenos en: 
+          <a href="https://twitter.com/KetanoLab" target="_blank" class="azul"> 
+            Twitter 
+          </a> | 
+          <a href="https://www.facebook.com/ketanolabsrl" target="_blank" class="azul"> 
+            Facebook 
+          </a>| 
+          <a href="https://www.linkedin.com/company/76603728" target="_blank" class="azul"> 
+            LinkedIn 
+          </a>
+        </span>  
       </div>
+    </div>
 
+  </div>
+
+      
 
  
-  </div>
-</div>
+
 </div>
 
