--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <!-- Footer -->
-<footer class="container-fluid">
+<footer class="container-footer">
   <!-- Section: Links  -->
   <section>
     <div class="container text-md-start mt-5">
