--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -77,40 +77,36 @@
     <!-- h1 Nuestros Clientes -->
     <h2 class="text-center mb-10">Confian en Nosotros</h2>
     <!-- Inicio section div flex -->
-    <section class="d-flex justify-content-center" >
+    <section class="d-flex flex-wrap justify-content-center" >
       <!-- Inicio 1 logo de flexbox -->
-      <div>
+      <div class="logo">
         <a href="https://www.derechosdigitales.org/" target="_blank">
           <img src="../../../assets/img/Logo-Derechos-Digitales-01.png" class="efecto"  alt="Derechos Digitales" id="imagen1">
         </a>
       </div>
       <!-- Inicio de 2 logo de flexbox -->
-      <div>
+      <div class="logo">
         <a href="https://www.bisa.com/" target="_blank">
           <img src="../../../assets/img/bancobisa.png" class="efecto"  alt="Banco Bisa" id="imagen2">
         </a>
       </div>
      <!-- Inicio de 3 logo de flexbox -->
-      <div>
+      <div class="logo">
         <a href="https://www.lbc.bo/" target="_blank">
           <img src="../../../assets/img/lbc-blanco.png" class="efecto"  alt="La Boliviana Ciacruz" id="imagen3">
         </a>
       </div>
      <!-- Inicio de 4 logo de flexbox -->
-      <div>
-        <div class="align-self-center">
+      <div class="logo">
           <a href="https://www.facebook.com/CCMSFLP/" target="_blank">
             <img src="../../../assets/img/sanfrancisco.jpg" class="efecto"  alt="San Francisco" id="imagen4">
           </a>
-        </div>
       </div>
       <!-- Inicio de 5 logo de flexbox -->
-      <div>
-        <div class="align-self-center">
+      <div class="logo">
           <a href="https://www.comunicacion.gob.bo/" target="_blank">
             <img src="../../../assets/img/mincom_blanco.png" class="efecto"  alt="Ministerio Comunicación Bolivia" id="imagen5">
           </a>
-        </div>
       </div>
     </section>
   </div>
@@ -120,9 +116,9 @@
     <!-- h1 organizaciones amigas -->
     <h2 class="text-center mb-10">Aliados </h2>
     <!-- Inicio de div flex de aliados -->
-      <section class="d-flex justify-content-center">
+      <section class="d-flex flex-wrap justify-content-center">
         <!-- Inicio de logo 1 de aliados-->
-        <div class="marco-ext2 logo2 d-flex">
+        <div class="marco-ext2 logo d-flex">
           <div class="align-self-center">
             <a href="https://martadero.org/quienes-somos/" target="_blank">
               <img src="../../../assets/img/marca-mARTadero-escala-grises-para-fondo-oscuro.png" class="efecto"  alt="Martadero" id="imagenesaliados1">
@@ -130,7 +126,7 @@
           </div>
         </div>
         <!-- Inicio de logo 2 de aliados -->
-        <div class="marco-ext2 logo2 d-flex">
+        <div class="marco-ext2 logo d-flex">
           <div class="align-self-center">
           <a href="https://openlab.ec/presentacion" target="_blank">
             <img src="../../../assets/img/Logo_Openlab3n.svg" class="efecto" alt="Openlab Ec" id="imagenesaliados2">
@@ -138,7 +134,7 @@
           </div>
         </div>
         <!-- Inicio de logo 3 de aliados -->
-        <div class="marco-ext2 logo2 d-flex">
+        <div class="marco-ext2 logo d-flex">
           <div class="align-self-center">
             <img src="../../../assets/img/illa.png" class="efecto" alt="Illa" id="imagenesaliados4">
           </div>
@@ -147,5 +143,6 @@
     </div>
   </div>
 <!-- ========== End Logos aliados ========== -->
-
+</div>
+</div>
 <app-footer></app-footer>
