--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -18,34 +18,32 @@
         <!-- Grid column -->
         <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">Servicios</h6>
-          <p><a href="/marketing" >Marketing Exponencial</a></p>
-          <p><a href="/coaching" >Coaching Digital</a></p>
-          <p><a href="/developers" >Head Hunting Developers</a></p>
-          <p>
-            <a href="/dapps" >Aplicaciones Descentralizadas</a>
-          </p>
-          <p><a href="/blockchain" >Soluciones Blockchain</a></p>
-          <p><a href="/services" >Servicios Web</a></p>
-          <p><a href="/apps" >Aplicaciones Móviles</a></p>
-          <p><a href="/commerce" >E-commerce</a></p>
-          <p><a href="/turismo" >Turismo Virtual</a></p>
-          <p><a href="/arte" >Arte Digital NFT</a></p>
+          <h6 class="text-uppercase fw-bold mb-4">{{"nav.servicios" | translate}}</h6>
+          <p><a href="/marketing">{{ "marketing.title" | translate }}</a></p>
+          <p><a href="/coaching">{{ "digital-projects.title" | translate }}</a></p>
+          <p><a href="/developers">Head Hunting Developers</a></p>
+          <p><a href="/dapps">{{ "dapps.title" | translate }}</a></p>
+          <p><a href="/blockchain">{{ "blockchain.title" | translate}}</a></p>
+          <p><a href="/services">{{ "webservices.title" | translate }}</a></p>
+          <p><a href="/apps">{{ "apps.title" | translate }}</a></p>
+          <p><a href="/commerce">{{ "commerce.title" | translate }}</a></p>
+          <p><a href="/turismo">{{ "sightseeing.title" | translate }}</a></p>
+          <p><a href="/arte">{{ "digital-art.title" | translate }}</a></p>
         </div>
         <!-- Grid column -->
 
         <!-- Grid column -->
         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">Enlaces</h6>
+          <h6 class="text-uppercase fw-bold mb-4">{{ "footer.links" | translate }}</h6>
           <p>
-            <a href="/nosotros" >Nosotros</a>
+            <a href="/nosotros">{{ "nav.nosotros" | translate }}</a>
           </p>
           <p>
-            <a href="/experiencia" >Nuestra Experiencia</a>
+            <a href="/experiencia" >{{ "nav.experiencia" | translate }}</a>
           </p>
           <p>
-            <a href="https://app.gather.town/app/zmougmiMJ2HHVYbZ/ketanolab" target="_blank">Oficina Virtual</a>
+            <a href="https://app.gather.town/app/zmougmiMJ2HHVYbZ/ketanolab" target="_blank">{{ "nav.oficina" | translate }}</a>
           </p>
         </div>
         <!-- Grid column -->
@@ -53,9 +51,7 @@
         <!-- Grid column -->
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
-          <h6 class="text-uppercase fw-bold mb-4">
-            Contacto
-          </h6>
+          <h6 class="text-uppercase fw-bold mb-4">{{ "footer.contact" | translate }}</h6>
           <p><i class="fa fa-home"></i> Rambla Republica Peru 757, Montevideo, Uruguay</p>
           <p>
             <i class="fa fa-envelope"></i>
