--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,7 @@ body {
     font-family: 'Jost', sans-serif;
     font-weight: 400;
     font-size: 18px;
-    cursor:url(/assets/img/cursor.png), auto;
+    cursor:url("./assets/img/cursor.svg"), auto;
 }
 
 .servicios-box{
