--- a/src/app/Components/coaching/coaching.component.html
+++ b/src/app/Components/coaching/coaching.component.html
@@ -1,97 +1,53 @@
-<!-- Container General de la página -->
-<div class="container-fluid mt-16 mb-16 fondo">
-  <!-- NavBar -->
-  <app-nav></app-nav>
-  <!-- Container contenido de la página -->
-  <div class="container">
-    <!-- H1 -->
-    <h1 class="mt-16">
-      {{"digital-projects.title" | translate}}
-    </h1>
-    <div class="row">
-      <div class="col-md-4 mt-16">
-        <article> 
-          <p class="text-justify">
-            {{"digital-projects.paragraph.0" | translate}}
-          </p>
-        </article>
-      </div>
-      <div class="col-md-4 mt-16">
-        <article>
-          <ul>
-            <li>
-              <h2 class="ofrecemos bold">
-                {{"ofrecemos.title" | translate}}
-              </h2>
-            </li>
-            <li class="text-justify mt-5">
-              {{"digital-projects.paragraph.1" | translate}}
-            </li>
+<app-nav></app-nav>
 
-            <li class="text-justify mt-5">
-              {{"digital-projects.paragraph.2" | translate}}
-            </li>
+<div class="fondo container-servicios">
+    <div class="container">
+        <h2>{{"digital-projects.title" | translate}}</h2>
+        
+        <div class="row">
+            <div class="col-md-7">
+                <article>
+                    <p class="text-justify">
+                      {{"digital-projects.paragraph.0" | translate}}
+                    </p>
 
-            <li class="text-justify mt-5">
-              {{"digital-projects.paragraph.3" | translate}}
-            </li>
-            <li class="centrar_boton">
+                    <h3>{{"ofrecemos.title" | translate}}</h3>
+                    <ul class="align">
+                        <li class="text-justify">
+                          {{"digital-projects.paragraph.1" | translate}}
+                        </li>
+                        <li>
+                          {{"digital-projects.paragraph.2" | translate}}
+                        </li>
+                        <li>
+                          {{"digital-projects.paragraph.3" | translate}}
+                        </li>
+                    </ul>
+                </article>
+                
+            </div>
 
-              <!-- Formulario con efecto ngIF, se oculta el botòn y aparece el formulario -->
-              
-                  <div class="container" (click)="estado=!estado">
-                    <div *ngIf="estado">
-                        <a  class="button-form centrar mb-16"> 
-                            <span class="text">
-                              {{"button.contact" | translate}}
-                            </span>
-                        </a>
-                    </div>
-                </div>
-
-            </li>
-          </ul>
-        </article>
-      </div>
-      <div class="col-md-4 mt-16 mb-16">
-        <article>
-          <img src="../../../assets/img/proyecdigi.png" class="img1 pequeño mt-16" alt="Proyectos Digitales">
-        </article>
-      </div>
-    </div>
-</div>
-  <!-- Container Formulario -->
-
-  <div class="container mt-16 mb-16">
-
-        <!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
-    <div class="row">
-      <div class="col-md-6">
-        <div *ngIf="!estado" class="mt-16 mb-16">
-            <form class="p-8 formulario" target="_blank" action="https://formsubmit.co/contacto@ketanolab.com" method="POST">
-                <div class="form-group">
-                    <label for="nombreapellido">
-                        Nombre y Apellido
-                    </label>
-                    <input type="text" class="form-control mt-5 tamaño" id="nombreapellido" placeholder="Nombre y Apellido" value="Tu Nombre y Apellido" required>
-                </div>
-                <div class="form-group mt-5">
-                    <label for="email">
-                        Email
-                    </label>
-                    <input type="email" class="form-control mt-5 tamaño" id="email" placeholder="Ingresa tu correo electrónico">
-                    </div>
-                <div class="form-group mt-5">
-                    <label for="consulta">
-                        Área de Consulta
-                    </label>
-                    <textarea class="form-control mt-5 tamaño" id="consulta" rows="5"></textarea>
-                    </div>
-                <button class="btn btn-primary mt-5" type="submit">Enviar Formulario</button>
-            </form>    
-        </div>  
+            <div class="col-md-5">
+                <img src="../../../assets/img/markexp.png" class="img1 img-fluid" alt="marketing exponencial">
+            </div>
         </div>
-      </div>
+
+        <div class="" (click)="estado=!estado">
+            <div *ngIf="estado">
+                <a class="button-form">
+                    <span class="text">
+                        {{"button.contact" | translate}}
+                    </span>
+                </a>
+            </div>
+        </div>
+
+        <div class="row formulario-servicios">
+                <!-- De aquí para abajo aparece la nueva parte, que se activa con el evento-->
+                <div *ngIf="!estado">
+                    <app-formulario></app-formulario>
+                </div>
+        </div>
     </div>
-<app-footer></app-footer>
 </div>
+<app-footer></app-footer>
