--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -1,80 +1,64 @@
-<!-- Inicio container general-->
-<div class="container-fluid container-experiencia">
-<!-- nav bar metido dentro del container -->
-  <!-- Container carrusel -->
-    <div class="container">
-      <!-- Fila 1 del container carrusel -->
-      <div class="row">
-        <!-- Columa 1 de fila 1 -->
-        <div class="col-xxl-4 col-xl-6">
-          <!-- Carousel -->
-          <div id="ketanolab" class="carousel slide justify-content-center" data-bs-ride="carousel">
-            <!-- The slideshow/carousel -->
-            <div class="carousel-inner">
-              <!-- Capa Pc -->
-              <img class="carouselpc" src="assets/img/pc.png">
-              <div class="carousel-item active tamaño posicion0">
-                <h3 class="h3centrar">Banco Bisa</h3>
-                <a href="https://www.bisa.com/" target="_blank"><img src="assets/img/carouselbancobisa.png" alt="Banco Bisa" class="d-block carouselbancobisa"></a>
-              </div>
-              <div class="carousel-item tamaño posicion1">
-                <h3 class="h3bolivianacentrar">Boliviana Ciacruz</h3>
-                <a href="https://www.lbc.bo/" target="_blank"><img src="assets/img/carouselboliviana.png" alt="Boliviana Ciacruz" class="d-block"></a>
-              </div>
-              <div class="carousel-item tamaño posicion2">
-                <h3 class="h3centrar">Cacho de Cacho</h3>
-                <a href="https://play.google.com/store/apps/details?id=viny.soltux" target="_blank"><img src="assets/img/cacho.png" alt="Cacho de Cacho" class="d-block"></a>
-              </div>
+<app-nav></app-nav>
+
+<div class="container-experiencia">
+  <div class="container">
+    <h2 class="text-center">Nuestra experiencia</h2>
+
+    <div class="row justify-content-center">
+      <div class="col-md-4">
+        <!-- Carousel -->
+        <div class="carousel slide carousel-fade justify-content-center" data-bs-ride="carousel">
+          <!-- The slideshow/carousel -->
+          <div class="carousel-inner">
+            <!-- Capa Pc -->
+            <div class="carousel-item active">
+              <a href="https://www.bisa.com/" target="_blank"><img src="assets/img/carouselbancobisa.png" alt="Banco Bisa" class="d-block"></a>
+              <h4 class="">Banco Bisa</h4>
+            </div>
+  
+            <div class="carousel-item">
+              <a href="https://www.lbc.bo/" target="_blank"><img src="../../../assets/img/carouselboliviana.png" alt="Banco Bisa" class="d-block"></a>
+              <h4 class="">Boliviana Ciacruz</h4>
+            </div>
+  
+            <div class="carousel-item">
+              <a href="https://play.google.com/store/apps/details?id=viny.soltux" target="_blank"><img src="../../../assets/img/cacho.png" alt="Banco Bisa" class="d-block"></a>
+              <h4 class="">Cacho de Cacho</h4>
             </div>
           </div>
         </div>
-        <!-- Inicio columna 2 de fila 1 carrusel -->
-        <div class="col-xxl-4 col-xl-6">
-          <!-- Carousel -->
-          <div id="ketano" class="carousel slide" data-bs-ride="carousel">
-            <!-- The slideshow/carousel -->
-            <div class="carousel-inner">
-              <!-- Capa Pc -->
-              <img src="assets/img/pc.png">
-              <div class="carousel-item active posicion3">
-                <h3 class="h3certix">Certix</h3>
-                <a href="https://certix.me" target="_blank"><img src="assets/img/certix.png" alt="Certix" class="d-block"></a>
-              </div>
-              <div class="carousel-item posicion4">
-                <h3 class="h3ecotambo">Ecotambo</h3>
-                <img src="assets/img/ecotambo.png" alt="Ecotambo" class="d-block">
-              </div>
-              <div class="carousel-item posicion5">
-                <h3 class="h3tupac">Tupac Katari</h3>
-                <img src="assets/img/tupac.png" alt="Tupac Katari" class="d-block">
-              </div>
+      </div>
+  
+      <div class="col-md-4">
+        <!-- Carousel -->
+        <div class="carousel slide carousel-fade justify-content-center" data-bs-ride="carousel">
+          <!-- The slideshow/carousel -->
+          <div class="carousel-inner">
+  
+            <div class="carousel-item active">
+              <a target="_blank"><img src="../../../assets/img/ecotambo.png" alt="Banco Bisa" class="d-block"></a>
+              <h4 class="">Ecotambo</h4>
+            </div>
+  
+            <div class="carousel-item">
+              <a target="_blank"><img src="../../../assets/img/tupac.png" alt="Tupac Katari" class="d-block"></a>
+              <h4 class="">Tupac Katari</h4>
+            </div>
+  
+            <div class="carousel-item">
+              <a target="_blank"><img src="../../../assets/img/francisco.png" alt="Tupac Katari" class="d-block"></a>
+              <h4 class="">San Francisco</h4>
             </div>
           </div>
         </div>
-        <!-- Inicio columna 3 de fila 1 carrusel -->
-        <div class="col-xxl-4 col-xl-6">
-          <!-- Carousel -->
-          <div id="ketano" class="carousel slide" data-bs-ride="carousel">
-            <!-- The slideshow/carousel -->
-            <div class="carousel-inner">
-              <!-- Capa Pc -->
-              <img src="assets/img/pc.png">
-              <div class="carousel-item active posicion6">
-                <h3 class="h3nusimi">Nusimi</h3>
-                <a href="https://play.google.com/store/apps/details?id=com.ketanolab.nusimi&" target="_blank"><img src="assets/img/nusimi.png" alt="Certix" class="d-block"></a>
-              </div>
-              <div class="carousel-item posicion7">
-                <h3 class="h3francisco">San Francisco</h3>
-                <img src="assets/img/francisco.png" alt="Ecotambo" class="d-block">
-              </div>
-            </div>
-          </div>
-        </div>
-       
-    <!-- Inicio container clientes -->
+      </div>
+  
+    </div>
+  </div>
+
   <div class="container clientes">
     <!-- h1 Nuestros Clientes -->
-    <h2 class="text-center mb-10">Confian en Nosotros</h2>
+    <h2 class="text-center">Confian en Nosotros</h2>
     <!-- Inicio section div flex -->
     <section class="d-flex flex-wrap justify-content-center" >
       <!-- Inicio 1 logo de flexbox -->
@@ -110,10 +94,10 @@
     </section>
   </div>
 
-<!-- ========== Start Container Logos aliados ========== -->
+
   <div class="container aliados">
     <!-- h1 organizaciones amigas -->
-    <h2 class="text-center mb-10">Aliados </h2>
+    <h2 class="text-center">Aliados </h2>
     <!-- Inicio de div flex de aliados -->
       <section class="d-flex flex-wrap justify-content-center">
         <!-- Inicio de logo 1 de aliados-->
@@ -140,39 +124,6 @@
         </div>
       </section>
     </div>
-  </div>
-<!-- ========== End Logos aliados ========== -->
+
 </div>
-</div>
-
-
-
-<div class="container">
-  <div class="row">
-    <div class="col-md-4">
-      <!-- Carousel -->
-      <div class="carousel slide carousel-fade justify-content-center" data-bs-ride="carousel">
-        <!-- The slideshow/carousel -->
-        <div class="carousel-inner">
-          <!-- Capa Pc -->
-          <div class="carousel-item active">
-            <a href="https://www.bisa.com/" target="_blank"><img src="assets/img/carouselbancobisa.png" alt="Banco Bisa" class="d-block"></a>
-            <h4 class="">Banco Bisa</h4>
-          </div>
-
-          <div class="carousel-item">
-            <a href="https://www.bisa.com/" target="_blank"><img src="../../../assets/img/carouselboliviana.png" alt="Banco Bisa" class="d-block"></a>
-            <h4 class="">Boliviana Ciacruz</h4>
-          </div>
-
-          <div class="carousel-item">
-            <a href="https://www.bisa.com/" target="_blank"><img src="../../../assets/img/cacho.png" alt="Banco Bisa" class="d-block"></a>
-            <h4 class="">Cacho de Cacho</h4>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-
+<app-footer></app-footer>
