--- a/src/app/Components/footer/footer.component.html
+++ b/src/app/Components/footer/footer.component.html
@@ -9,9 +9,9 @@
         <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4" id="margen">
           <!-- Content -->
           <h6 class="text-uppercase fw-bold mb-4 ml-5">Ketanolab</h6>
-          <p><a href="https://www.facebook.com/ketanoLabsrl/" target="_blank"><i class="mr-6 fa fa-facebook fa-2x"></i></a>
-            <a href="https://www.linkedin.com/company/76603728" target="_blank"><i class="mr-6 fa fa-linkedin fa-2x"></i></a>
-            <a href="https://twitter.com/KetanoLab" target="_blank"><i class="mr-2 fa fa-twitter fa-2x"></i></a></p>
+          <p><a href="https://www.facebook.com/ketanoLabsrl/" target="_blank"><i class="img-rrss fa fa-facebook fa-2x"></i></a>
+            <a href="https://www.linkedin.com/company/76603728" target="_blank"><i class="img-rrss fa fa-linkedin fa-2x"></i></a>
+            <a href="https://twitter.com/KetanoLab" target="_blank"><i class="img-rrss fa fa-twitter fa-2x"></i></a></p>
         </div>
         <!-- Grid column -->
 
@@ -57,8 +57,8 @@
             <i class="fa fa-envelope"></i>
             <a href="mailto:contacto@hanansoft.com"> contacto@hanansoft.com</a>
           </p>
-          <p><i class="fa fa-phone"></i> +598-92922752</p>
-          <p>© 2020 Copyright <br>Ketanolab</p>
+          <p><i class="fa fa-phone"></i> +598 92922752</p>
+          <p>© 2022 Copyright <br>Hanansoft</p>
 
         </div>
         <!-- Grid column -->
