--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -8,7 +8,7 @@
     </div>
     <div class="m-0 row justify-content-center align-item-center">
       <div class="col-auto text-center">
-        <a routerLink="/inicio" class="button-64">
+        <a href="#inicio" class="button-64">
           <span class="text">
             Ingresa
           </span>
