--- a/src/app/Components/inicio/inicio.component.css
+++ b/src/app/Components/inicio/inicio.component.css
@@ -377,3 +377,12 @@ a:hover {
 .container-contacto {
     padding: 6rem 0;
 }
+
+
+
+/** Servicios  **/
+
+.fondo {
+    background-image: url("./../../../assets/img/background-3883181_1920.jpg");
+    background-size: cover;
+}
