--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -1,10 +1,10 @@
-<nav class="navbar navbar-hanansoft navbar-expand-lg bg-dark sticky-top">
+<nav id="inicio" class="navbar navbar-hanansoft navbar-expand-lg bg-dark sticky-top">
   <div class="container navbar-ketanolab">
     <a class="navbar-brand" href="#">Hanansoft</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
+    <div class="collapse navbar-collapse navbar-nave" id="navbarNav">
       <ul class="navbar-nav navbar-ketanolab ms-auto">
         <li class="nav-item">
           <a class="nav-link btn-ketanolab" href="/inicio">{{"nav.servicios" | translate}}</a>
