--- a/src/app/Components/experiencia/experiencia.component.html
+++ b/src/app/Components/experiencia/experiencia.component.html
@@ -52,9 +52,35 @@
           </div>
         </div>
       </div>
+
+
+      <div class="col-md-4">
+        <!-- Carousel -->
+        <div class="carousel slide carousel-fade justify-content-center" data-bs-ride="carousel">
+          <!-- The slideshow/carousel -->
+          <div class="carousel-inner">
+  
+            <div class="carousel-item active">
+              <a target="_blank"><img src="../../../assets/img/certix.png" alt="Banco Bisa" class="d-block"></a>
+              <h4 class="">Certix</h4>
+            </div>
+  
+            <div class="carousel-item">
+              <a target="_blank"><img src="../../../assets/img/nusimi.png" alt="Tupac Katari" class="d-block"></a>
+              <h4 class="">Nusimi</h4>
+            </div>
+  
+          </div>
+        </div>
+      </div>
   
     </div>
   </div>
+
+
+
+
+
 
   <div class="container clientes">
     <!-- h1 Nuestros Clientes -->
@@ -93,6 +119,10 @@
       </div>
     </section>
   </div>
+
+
+
+
 
 
   <div class="container aliados">
