--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse navbar-nave" id="navbarNav">
       <ul class="navbar-nav navbar-ketanolab ms-auto">
         <li class="nav-item">
-          <a class="nav-link btn-ketanolab" href="/inicio">{{"nav.servicios" | translate}}</a>
+          <a class="nav-link btn-ketanolab" href="#inicio">{{"nav.servicios" | translate}}</a>
         </li>
         <li class="nav-item">
           <a class="nav-link btn-ketanolab" href="/nosotros">{{"nav.nosotros" | translate}}</a>
@@ -16,7 +16,7 @@
           <a class="nav-link btn-ketanolab" href="/experiencia">{{"nav.experiencia" | translate}}</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link btn-ketanolab" href="#">{{"nav.oficina" | translate}}</a>
+          <a class="nav-link btn-ketanolab" target="_blank" href="https://app.gather.town/app/6pXc4faC3hRl8FkQ/hanansoft">{{"nav.oficina" | translate}}</a>
         </li>
         <span class="nav-link nav-idiomas">
           <a class="btn-idioma" [ngClass]="{'selected':false}" href="#" (click)="setEn(); switchIdiomaEN = true;">EN</a>
