--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -10,7 +10,7 @@
       <div class="col-auto text-center">
         <a href="#inicio" class="button-64">
           <span class="text">
-            Ingresa
+            {{"home.start" | translate}}
           </span>
         </a>  
       </div>
