--- a/src/app/Components/arte/arte.component.html
+++ b/src/app/Components/arte/arte.component.html
@@ -26,7 +26,7 @@
             </div>
 
             <div class="col-md-5">
-                <img src="../../../assets/img/markexp.png" class="img1 img-fluid" alt="digital-art exponencial">
+                <img src="../../../assets/img/nft.png" class="img1 img-fluid" alt="digital-art exponencial">
             </div>
         </div>
 
