--- a/src/app/Components/inicio/inicio.component.html
+++ b/src/app/Components/inicio/inicio.component.html
@@ -2,24 +2,20 @@
 
 <app-nav></app-nav>
 
-<div class="container-presentacion">
+<div id="inicio" class="container-inicio">
     <div class="container">
+      <div class="container-presentacion">
+
         <div class="row justify-content-center">
-            <div class="col-md-7">
-                <div class="texto-presentacion text-center">
-                    <h2>Somos una startup tecnológica con responsabilidad social y cultural, que innova en soluciones de sistemas digitales a medida</h2>
+          <div class="col-md-7">
+              <div class="texto-presentacion text-center">
+                  <h2>{{"inicio.presentation"|translate}}</h2>
                 </div>
-            </div>
-
+          </div>
         </div>
+      </div>
 
-
-    </div>
-</div>
-
-<div class="container-inicio">
-    <div class="container">
-        <div class="text-center">
+        <div id="servicios" class="text-center">
             <h2>Nuestros servicios</h2>
         </div>
     
