--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse navbar-nave" id="navbarNav">
       <ul class="navbar-nav navbar-ketanolab ms-auto">
         <li class="nav-item">
-          <a class="nav-link btn-ketanolab" href="#inicio">{{"nav.servicios" | translate}}</a>
+          <a class="nav-link btn-ketanolab" href="#servicios">{{"nav.servicios" | translate}}</a>
         </li>
         <li class="nav-item">
           <a class="nav-link btn-ketanolab" href="/nosotros">{{"nav.nosotros" | translate}}</a>
