--- a/src/app/Components/nosotros/nosotros.component.html
+++ b/src/app/Components/nosotros/nosotros.component.html
@@ -1,7 +1,7 @@
 <app-nav></app-nav>
 <div class="container-fondo">
   <div class="container">
-    <h2 class="text-center">Quiénes somos</h2>
+    <h2 class="text-center">{{"we.title"|translate}}</h2>
     <div class="row justify-content-center">
       <div class="col-md-8">
         <p>{{ "we.paragraph"| translate }}</p>
@@ -16,8 +16,8 @@
           <img class="card-img" src="../../../assets/img/pedro.png"  alt="Pedro.">
           <div class="card-img-overlay">
             <h4 class="card-title">{{"we.person-2" | translate}}</h4>
-            <p class="card-text justificado"> {{"we.person-2_description" | translate}} </p>
-            <a href="https://uy.linkedin.com/in/gezn" target="_blank" ></a>
+            <p class="card-text"> {{"we.person-2_description" | translate}} </p>
+            <i class="fa fa-linkedin"><a href="https://uy.linkedin.com/in/gezn" target="_blank" ></a></i>
           </div>
         </div>
       </div>
@@ -28,8 +28,8 @@
             <img class="card-img" src="../../../assets/img/mile.jpg" alt="Milenka.">
             <div class="card-img-overlay">
               <h4 class="card-title">{{"we.person-3" | translate}}</h4>
-              <p class="card-text justificado milenka"> {{"we.person-3_description" | translate}} </p>
-              <a href="https://www.linkedin.com/in/milenka-escobar-pereira-648a0942/" target="_blank" ></a>
+              <p class="card-text"> {{"we.person-3_description" | translate}} </p>
+              <i class="fa fa-linkedin"><a href="https://www.linkedin.com/in/milenka-escobar-pereira-648a0942/" target="_blank" ></a></i>
             </div>
           </div>
       </div>
@@ -43,8 +43,9 @@
           <img class="card-img" src="../../../assets/img/samantha.jpeg"   alt="Samantha.">
           <div class="card-img-overlay">
             <h4 class="card-title">{{"we.person-4" | translate}}</h4>
-            <p class="card-text justificado"> {{"we.person-4_description" | translate}}</p>
-            <a href="https://www.linkedin.com/in/samantha-rueda-80176b22b/" target="_blank"></a>
+            <p class="card-text"> {{"we.person-4_description" | translate}}</p>
+            <i class="fa fa-linkedin">
+            <a href="https://www.linkedin.com/in/samantha-rueda-80176b22b/" target="_blank"></a></i>
           </div>
         </div>
       </div>
@@ -55,8 +56,8 @@
           <img class="card-img" src="../../../assets/img/melania.png"  alt="Melania.">
           <div class="card-img-overlay">
             <h4 class="card-title">{{"we.person-5" | translate}}</h4>
-            <p class="card-text justificado"> {{"we.person-5_description" | translate}} </p>
-            <a href="https://www.linkedin.com/in/melaniasanmiguel/" target="_blank" ></a>
+            <p class="card-text"> {{"we.person-5_description" | translate}} </p>
+            <i class="fa fa-linkedin"><a href="https://www.linkedin.com/in/melaniasanmiguel/" target="_blank" ></a></i>
           </div>
         </div>
       </div>
