--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,8 +1,9 @@
 <div class="fondo d-flex align-items-center justify-content-center">
   <div class="">
     <div class="m-0 row justify-content-center align-item-center">
-      <div class="col-auto text-center home-logo">
+      <div class="col-auto text-center">
         <!--<img class="" src=""/>-->
+        <img class="home-logo" src="../../../assets/img/Home/isotipo.svg" alt=""><br>
         <span class="home-logo-text">Hanansoft</span>
       </div>
     </div>
