--- a/src/app/Components/nav/nav.component.html
+++ b/src/app/Components/nav/nav.component.html
@@ -1,6 +1,6 @@
 <nav id="inicio" class="navbar navbar-hanansoft navbar-expand-lg bg-dark sticky-top">
   <div class="container navbar-ketanolab">
-    <a class="navbar-brand" href="#">Hanansoft</a>
+    <a class="navbar-brand" href="#"><img class="navbar-logo" src="../../../assets/img/Home/logo.svg" alt=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
